--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,11 @@
-@tailwind base;
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+
+@import url('https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css');
+
+@import "vuetify/dist/vuetify.min.css";
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 [x-cloak] {
     display: none;
